# automation_projects

./: .gitignore  .replit  GIT_SETUP.md  clean_git_setup.sh  pyproject.toml  replit.md  setup_git.py  setup_git_account.py
case_study_generator/: README.md  config.yaml  main.py  requirements.txt
case_study_generator/src/: gemini_research.py  notion_client.py  openai_synthesis.py  yaml_generator.py
case_study_generator/src/core/: generation.py  research.py  synthesis.py
case_study_generator/src/models/: case_study.py  config.py
case_study_generator/src/services/: gemini.py  notion.py  openai.py
case_study_generator/src/utils/: formatting.py  validation.py
case_study_generator/tests/unit/: test_research.py
knowledge_base/: .env.example  README.md  app.py  app_advanced.py  app_enhanced.py  requirements.txt  test_detailed.py  test_openai.py  test_simple.py
knowledge_base/data/raw/: .Buy Then Build How Acquisition Entrepreneurs Outsmart the Startup Game (Walker Deibel) (Z-Library).pdf.icloud
knowledge_base/database/0823bbb8-9755-4846-8b70-aa39a7213d04/: index_metadata.pickle
knowledge_base/database/d399260d-f982-4115-ad9a-1b88f908bfff/: index_metadata.pickle
knowledge_base/src/: config.py  pdf_ingest.py  ui.py  vector_store.py
numan_case_study/: format_posthog_events.py  formatted_user_journeys.ndjson  send_to_posthog.py  simulated_numan_journeys_100users.ndjson  simulated_numan_user_funnels_10min.ndjson  simulated_user_journeys_detailed.ndjson  supercom_100_users_varied_journeys.ndjson
reddit_sentiment_analyzer/: .gitignore  Makefile  README.md  SERVER_SETUP.md  SETUP_GUIDE.md  add_processed_column.py  analysis_menu.py  app.py  brand_selection_workflow.py  check_env.py  check_processing_status.py  check_prospects.py  check_reddit_table.py  check_table_exists.py  check_table_schema.py  complete_reddit_analysis.py  correct_workflow.py  debug_scraper_data.py  debug_simple.py  debug_supabase.py  deploy_to_server.sh  env.example  final_working_scraper.py  fix_env.py  fix_git_config.sh  get_analysis_results.py  install_deps.py  main.py  process_all_urls.py  process_existing_data.py  pyproject.toml  quick_setup.py  reddit_analyzer.py  requirements.txt  run_end_to_end.py  save_google_results_to_supabase.py  save_scraped_data.py  scrape_reddit_posts_from_db.py  scrape_reddit_simple.py  sentiment_analysis_workflow.py  (+22 more)
reddit_sentiment_analyzer/config/: settings.py
reddit_sentiment_analyzer/database/: db.py
reddit_sentiment_analyzer/deployment/docker/: Dockerfile  docker-compose.yml
reddit_sentiment_analyzer/deployment/k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
reddit_sentiment_analyzer/docs/: ARCHITECTURE.md  DEPLOYMENT.md
reddit_sentiment_analyzer/modules/: brand_selector.py  google_search.py  reddit_scraper.py
reddit_sentiment_analyzer/scripts/: setup.py
reddit_sentiment_analyzer/src/: __init__.py
reddit_sentiment_analyzer/src/api/: __init__.py  main.py
reddit_sentiment_analyzer/src/cli/: __init__.py  main.py
reddit_sentiment_analyzer/src/config/: __init__.py  settings.py
reddit_sentiment_analyzer/src/core/: __init__.py  analyzer.py
reddit_sentiment_analyzer/src/data/: __init__.py  models.py  processors.py
reddit_sentiment_analyzer/src/services/: __init__.py  apify.py  google_sheets.py  openai.py  supabase.py
reddit_sentiment_analyzer/src/utils/: __init__.py  logging.py
reddit_sentiment_analyzer/tests/: __init__.py  conftest.py
reddit_sentiment_analyzer/tests/unit/: test_analyzer.py
steps_analysis/: .gitignore
steps_analysis/analysis/: 03_feature_engineering.R  04_exploratory_analysis.R  05_causal_analysis.R
steps_analysis/outputs/data/processed/: .daily_steps_cleaned.rds.icloud  .user_daily_steps_final.rds.icloud
steps_analysis/outputs/data/raw/: .daily_steps.rds.icloud
supabase_mcp_server/: Makefile  README.md  TESTING_GUIDE.md  env.example  requirements.txt  server.py  setup_traefik_mcp.sh  test_core.py  test_quick.py
supabase_mcp_server/backup_old_files/: diagnostic.py  server.crt  server.key  server_http.py  server_https.py  server_simple.py  server_web.py  test_claude_connection.py  test_http_connection.py  test_real_database.py  test_simple_connection.py
supabase_mcp_server/docs/: API.md  DYNAMIC_DISCOVERY.md  MCP_INSTALLATION.md  SETUP.md  TESTING_GUIDE.md
supabase_mcp_server/examples/: basic_usage.py  dynamic_discovery_demo.py  simple_demo.py
supabase_mcp_server/src/supabase_mcp/: config.py  mcp_tools.py  supabase_client.py
supabase_mcp_server/tests/: test_mcp_tools.py
supabase_mcp_server/tests_backup/: run_tests.py  test_mcp_server.py
youtube/: fetch_hormozi_videos.py  fetch_transcripts.py
